# IntelligentChatbot

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  chat_service.py  config.py  db.py  endpoints.py  main.py  pyproject.toml  schemas.py  utils.py
excel_mcp/: pyproject.toml
excel_mcp/mcp_excel_server/: server.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: assistant.tsx
frontend/components/assistant-ui/: threadlist-sidebar.tsx
